--- a/src/components/vibePage/CoolCard.css
+++ b/src/components/vibePage/CoolCard.css
@@ -1,9 +1,11 @@
 .cool-card-wrapper:hover {
-    background-color: #ededed7f;
+    /* background-color: #ededed7f; */
+    border: black 1px dashed;
+
 }
 .cool-image {
     width: 100%;
-    border-radius: 6px;
+    /* border-radius: 6px; */
 }
 .cool-notes-link {
     background-color: rgba(255, 255, 255, 0);
@@ -21,10 +23,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 6px;
+        /* border-radius: 6px; */
         cursor: pointer;
         gap: 2px;
-        width: calc((80vw - (12px * 6)) / 3);
+        width: calc((80vw - (12px * 6)) / 3 - 2px);
         padding: 12px;
         height: fit-content;
     }
@@ -75,10 +77,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 6px;
+        /* border-radius: 6px; */
         cursor: pointer;
         gap: 2px;
-        width: calc((80vw - (12px * 4)) / 2);
+        width: calc((80vw - (12px * 4)) / 2 - 2px);
         padding: 12px;
         height: fit-content;
     }
@@ -129,10 +131,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 6px;
+        /* border-radius: 6px; */
         cursor: pointer;
         gap: 2px;
-        width: calc((90vw - (12px * 2)));
+        width: calc((80vw - (12px * 2)) - 2px);
         padding: 12px;
         height: fit-content;
     }
@@ -164,7 +166,7 @@
         white-space:nowrap;
         font-size: 14px;
         text-decoration: underline;
-        width: calc((90vw - (12px * 2)) - 12px);
+        width: calc((80vw - (12px * 2)) - 12px);
         display: block;
     }
     .cool-date {
