delete and edit functionalities done

--- a/src/components/edit/Edit.css
+++ b/src/components/edit/Edit.css
@@ -117,8 +117,8 @@
 .upload-button {
     background-color:white;
     color: #0000007f;
-    border: px solid #0000007f;
-    border-radius: 4px;
+    border-radius: 20px;
+    border: 2px solid #0000006f;
     font-family: Univers Bold;
     font-size: 16px;
     height: 32px;
@@ -126,6 +126,7 @@
     text-align: center;
     cursor: pointer;
     margin-top: 1vh;
+    padding: 0 16px 0 16px;
 }
 .upload-button:hover {
     background-color: #70ACBF;
@@ -195,10 +196,33 @@ select {
     font-size: 14px;
     font-family: Univers Regular;
     cursor: pointer;
+    background-color: #ffffff00;
 }
 .x-button:hover {
     color: black;
 }
 .asterisk {
     color: firebrick;
+}
+
+.confirm-div-container {
+    margin-top: 2vh;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.confirm-div {
+    background-color: white;
+    color: #0000007f;
+    cursor: pointer;
+    font-size: 14px;
+}
+.confirm-div:hover {
+    color: black;
+    text-decoration: underline;
+}
+.confirm-div-q {
+    background-color: white;
+    color: #0000007f;
+    font-size: 14px;
 }
