--- a/src/components/index/VibeCard.css
+++ b/src/components/index/VibeCard.css
@@ -2,17 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 6px;
+    border-radius: 10px;
     cursor: pointer;
     gap: 2px;
 }
 .card-wrapper:hover {
-    background-color: #ededed;
+    background-color: #f4f4f4;
 }
 .card-image {
     object-fit: cover;
     margin-bottom: 12px;
-    border-radius: 6px;
+    border-radius: 10px;
 }
 .card-title {
     color: black;
@@ -21,16 +21,16 @@
     overflow:hidden;
     white-space:nowrap;
     background-color: rgba(255, 0, 0, 0);
-    text-align: center;
+    text-align: left;
 }
 .card-description {
     color: black;
     font-family: Univers Regular;
     background-color: rgba(255, 0, 0, 0);
     margin-bottom: 2px;
-    text-align: center;
-    line-height: 1.5em;
-    height: 3em; 
+    text-align: left;
+    line-height: 1.2em;
+    height: 2.4em; 
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -46,7 +46,7 @@
         height: 20vw;
     }
     .card-title {
-        font-size: calc(20vw / 12);
+        font-size: calc(20vw / 10);
         width: 20vw;
     }
     .card-description {
