--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -22,6 +22,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding: 0 5vw 0 5vw;
+    justify-content: center;
 }
 @media only screen and (max-width: 1500px) {
     .page-title {
