--- a/src/components/Index.css
+++ b/src/components/Index.css
@@ -21,8 +21,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 5vw 0 5vw;
-    justify-content: center;
+    /* padding: 0 5vw 0 5vw; */
+    justify-content: flex-start;
+    width: 90vw;
 }
 @media only screen and (max-width: 1500px) {
     .page-title {
